@@ -26,6 +26,7 @@ Current version - **** ** ****, by Shigio Yamaguchi
 * htags: --style-sheet=<style file> option added.
 * htags: --no-javascript option and no_javascript config variable added.
 * htags: -g(--gtags) option added.
+* htags: -s(--symbols) option added.
 * gctags: --langmap option added.
 * gozilla: -f option added.
 * gctags: assumes __attribute__, const, volatile, wchar_t as a reserved word
